fix(auth): Send a different error code for missing or invalid 2FA credentials
